@@ -1714,6 +1714,14 @@ SEXP attribute_hidden do_subassign(SEXP call, SEXP op, SEXP args, SEXP rho)
     return do_subassign_dflt(call, op, ans, rho);
 }
 
+static void NORET errorNotSubsettable(SEXP x)
+{
+    SEXP call = R_CurrentExpression; /* behave like error() */
+    SEXP cond = R_makeNotSubsettableError(x, call);
+    R_signalErrorCondition(cond, call);
+    UNPROTECT(1); /* cond; not reached */
+}
+
 SEXP attribute_hidden do_subassign_dflt(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     SEXP subs, x, y;
@@ -1804,7 +1812,7 @@ SEXP attribute_hidden do_subassign_dflt(SEXP call, SEXP op, SEXP args, SEXP rho)
         }
         break;
     default:
-        error(R_MSG_ob_nonsub, type2char(TYPEOF(x)));
+        errorNotSubsettable(x);
         break;
     }
 
@@ -2235,7 +2243,7 @@ SEXP attribute_hidden do_subassign2_dflt(SEXP call, SEXP op, SEXP args, SEXP rho
         PROTECT(xup);
     }
     else
-        error(R_MSG_ob_nonsub, type2char(TYPEOF(x)));
+        errorNotSubsettable(x);
 
     if (recursed)
     {
@@ -2381,7 +2389,7 @@ SEXP R_subassign3_dflt(SEXP call, SEXP x, SEXP nlist, SEXP val)
     else if (TYPEOF(x) == SYMSXP || /* Used to 'work' in R < 2.8.0 */
              TYPEOF(x) == CLOSXP || TYPEOF(x) == SPECIALSXP || TYPEOF(x) == BUILTINSXP)
     {
-        error(R_MSG_ob_nonsub, type2char(TYPEOF(x)));
+        errorNotSubsettable(x);
     }
     else
     {
